# adw_assistent_v3

./: .gitignore  DOCUMENTACAO.md  README.md  agent.js  context.md  download_media.js  package-lock.json  package.json  test-report.json  wpp_init.js
src/: app.js  index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  whatsapp.json
src-tauri/src/: lib.rs  main.rs
